deployments/ingress/deployment.yml
# deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo-app
  namespace: ecommerce
  labels:
    app: foo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
        - name: foo-app
          image: kicbase/echo-server:1.0
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-app
  namespace: ecommerce
  labels:
    app: bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
        - name: bar-app
          image: kicbase/echo-server:1.0
          ports:
            - containerPort: 8080
