deployments/ingress/service.yml
# service.yml
apiVersion: v1
kind: Service
metadata:
  name: foo-service
  namespace: ecommerce
  labels:
    app: foo-service
spec:
  selector:
    app: foo
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bar-service
  namespace: ecommerce
  labels:
    app: bar-service
spec:
  selector:
    app: bar
  ports:
    - port: 8080
      targetPort: 8080
